--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^6.0",
         "laravel-mix": "^5.0.0",
+        "laravel-mix-purgecss": "^4.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.23.1",
         "sass-loader": "8.*",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.4"
     }
 }
