--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
-        "bootstrap-vue": "^2.0.4"
+        "bootstrap-vue": "^2.0.4",
+        "vue-material-design-icons": "^4.1.0"
     }
 }
