--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bootstrap": "^4.3.1",
+        "@inertiajs/inertia": "^0.10.1",
+        "@inertiajs/inertia-vue": "^0.7.2",
+        "@inertiajs/progress": "^0.2.6",
+        "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.0.4",
+        "compass-mixins": "^0.12.10",
         "vue-material-design-icons": "^4.1.0"
     }
 }
