--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
-        "shipping-docker/vessel": "^5.0"
+        "shipping-docker/vessel": "^5.0",
+        "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
