--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,71 +1,48 @@
 version: '2'
+
 services:
   app:
     build:
-      context: ./docker/app
+      args:
+        user: ${USER}
+        uid: ${USERID}
+      context: .
       dockerfile: Dockerfile
-    image: vessel/app
-    ports:
-     - "${APP_PORT}:80"
-    environment:
-      CONTAINER_ENV: "${APP_ENV}"
-      XDEBUG_HOST: "${XDEBUG_HOST}"
-      WWWUSER: "${WWWUSER}"
+    image: mini-crm
     volumes:
-      - .:/var/www/html
+      - .:/var/www
+    networks:
+      - crm
+      - web
+      - mariadb_database
+      - redis
+
+  nginx:
+    image: nginx:1.17-alpine
+    container_name: mini-crm-nginx
+    restart: unless-stopped
+    # ports:
+    #   - 8082:80
+    volumes:
+      - ./:/var/www
+      - ./infra/nginx:/etc/nginx/conf.d
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.mini-crm.rule=Host(`mini-crm.localhost`)'
+      - 'traefik.http.routers.mini-crm.rule=Host(`mini-crm.localhost`) || Host(`mini-crm.local`)'
       - 'traefik.http.routers.mini-crm.entrypoints=web'
       - 'traefik.http.services.mini-crm.loadbalancer.server.port=80'
       - 'traefik.docker.network=web'
+      # - 'traefik.http.routers.whoami.tls.certresolver=myresolver'
     networks:
-      - vessel
+      - crm
       - web
-      - mariadb_database
-  node:
-    build:
-      context: ./docker/node
-      dockerfile: Dockerfile
-      args:
-        uid: "${WWWUSER}"
-    image: vessel/node
-    user: node
-    volumes:
-     - .:/var/www/html
-    networks:
-     - vessel
-  mysql:
-    image: mysql:5.7
-    ports:
-     - "${MYSQL_PORT}:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    volumes:
-     - vesselmysql:/var/lib/mysql
-     # - ./docker/mysql/conf.d:/etc/mysql/conf.d
-     # - ./docker/mysql/logs:/var/log/mysql
-    networks:
-     - vessel
-  redis:
-    image: redis:alpine
-    volumes:
-     - vesselredis:/data
-    networks:
-     - vessel
+
 networks:
-  vessel:
+  crm:
     driver: "bridge"
   web:
     external: true
   mariadb_database:
     external: true
-volumes:
-  vesselmysql:
-    driver: "local"
-  vesselredis:
-    driver: "local"
+  redis:
+    external: true
